# interpretable-decision-modules

./: .gitignore  README.md  demo.py  pyproject.toml
api/: app.py  pipeline.py
audit/: logger.py
data/: generate.py
explain/: bundle.py
fusion/: evidence.py
fuzzy/: membership.py  rules.py
models/: risk_model.py
reports/: decision_report.html.j2  generator.py
tests/: test_fusion.py  test_fuzzy.py
